--- a/src/site/404.md
+++ b/src/site/404.md
@@ -1,6 +1,6 @@
 ---
 title: 404 – page not found
-heading: Uh oh…
+heading: Hoppalla…
 intro: |
     Looks like the page you were after has been moved, deleted or doesn’t exist.
 hideIntro: true
